--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-handlebars": "^7.0.2",
+    "express-handlebars": "^6.0.7",
+    "jsonwebtoken": "^9.0.0",
     "messagebird": "^4.0.1",
-    "mongoose": "^7.0.2",
+    "mongodb": "^5.1.0",
+    "mongoose": "^6.9.2",
     "multer": "^1.4.5-lts.1",
     "otp-generator": "^4.0.1",
     "twilio": "^4.8.0"
